# svz

./: README.md  image2svz.py
convert/: Makefile  svzconvert.c
libsvz/: CMakeLists.txt  LICENSE
libsvz/src/: CMakeLists.txt  basic-shapes.c  decode.c  draw-text.c  encode.c  features.c  image.c  lzcompress.c  svz.c
libsvz/src/include/svz/: basic-shapes.h  decode.h  defs.h  draw-text.h  encode.h  features.h  gif-palette.h  image.h  log.h  lzcompress.h  svz.h
libsvz/src/lzlib-1.11/: cbuffer.c  decoder.c
libsvz/tests/: CMakeLists.txt  decoder.c  encoder.c
picture-maker/: CMakeLists.txt
picture-maker/src/: CMakeLists.txt  lexer.l  parser.y  pm.c
web/: out.svz  svzload.html
